package eapli.base.enrollmentmanagement.domain;

public enum EnrollmentStatus {
    PENDING,

    APPROVED,

    REJECT
}
